group 'ch.cs'
version '1.0-SNAPSHOT'
apply plugin: 'java'
apply plugin: 'application'
sourceCompatibility = 1.11

repositories {
    mavenCentral()
}

dependencies {
    implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.9'
    implementation group: 'org.hsqldb', name: 'hsqldb', version: '2.6.1'

    implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.1.7'
    implementation 'org.slf4j:slf4j-api:1.7.36'
    implementation 'org.junit.jupiter:junit-jupiter:5.8.2'

    testImplementation group: 'junit', name: 'junit', version: '4.12'
    testImplementation group: 'org.mockito', name: 'mockito-core', version: '4.3.1'

}

application {
    mainClassName = "com.example.LogProcessor"
}

tasks.withType(Test) {
    useJUnitPlatform()
    jvmArgs '--enable-preview'
}